package Hotel;

public class MainApp {
    public static void main(String[] args) {
        HotelApps loginuser = new HotelApps();
        loginuser.haveAccount();
    }
}
